1. remove MAINTAINER in base, add proper labels. 2. migrate to tuna mirror 4. simplify multiarch image building 5. add base:multiarch tools

--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -1,19 +1,22 @@
 FROM wener/base as builder
+# Change the version to upgrade the base image
 RUN mkdir /rootfs && cd /rootfs && \
-    apk -X http://mirrors.aliyun.com/alpine/v3.7/main/ --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
+    apk -X https://mirrors.tuna.tsinghua.edu.cn/alpine/v3.7/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
 
 FROM scratch
+LABEL maintainer="wener@wener.me"\
+    org.label-schema.name="base" \
+    org.label-schema.vendor="Wener" \
+    org.label-schema.description="Alpine Linux with Chinese mirror and common packages" \
+    org.label-schema.url="https://github.com/wenerme/dockerfiles" \
+    org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
+    org.label-schema.version="3.7" \
+    org.label-schema.license="MIT"
+
+ENV ALPINE_ARCH=x86_64
 COPY --from=builder /rootfs /
-
-LABEL org.label-schema.name="base" \
-        org.label-schema.vendor="Wener" \
-        org.label-schema.description="Alpine Linux with China mirrors and common packages" \
-        org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
-        org.label-schema.version="3.7" \
-        org.label-schema.license="MIT"
-
-RUN echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
-    echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
+RUN echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
+    echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
 
 # Base tools
 RUN apk add --no-cache curl busybox-extras file nano libc6-compat
