--- a/base/x86/Dockerfile
+++ b/base/x86/Dockerfile
@@ -1,5 +1,6 @@
 FROM wener/base as builder
-ENV ARCH=ppc64le
+ENV ARCH=x86
+ENV QEMU_ARCH=i386
 WORKDIR /root
 RUN QEMU_ARCH=${QEMU_ARCH:-$ARCH} \
     && apk add --no-cache qemu-$QEMU_ARCH \
@@ -11,18 +12,16 @@ RUN QEMU_ARCH=${QEMU_ARCH:-$ARCH} \
 
 FROM scratch
 LABEL maintainer="wener@wener.me"\
-    org.label-schema.name="base:ppc64le" \
+    org.label-schema.name="base:s390x" \
     org.label-schema.vendor="Wener" \
-    org.label-schema.description="Alpine Linux ppc64le based on x86_64 qemu emulator" \
+    org.label-schema.description="Alpine Linux s390x based on x86_64 qemu emulator" \
     org.label-schema.url="https://github.com/wenerme/dockerfiles" \
     org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
     org.label-schema.version="3.7" \
     org.label-schema.license="MIT"
 
-ENV ALPINE_ARCH=ppc64le
+ENV ALPINE_ARCH=x86
 COPY --from=builder /root/target-root .
 
-RUN apk add --no-cache curl busybox file nano libc6-compat
-
-CMD [ "/usr/bin/qemu-ppc64le", "/bin/busybox", "ash" ]
+CMD [ "/usr/bin/qemu-i386", "/bin/busybox", "ash" ]
 
