--- a/base/armhf/Dockerfile
+++ b/base/armhf/Dockerfile
@@ -1,17 +1,27 @@
 FROM wener/base as builder
 ENV ARCH=armhf
+ENV QEMU_ARCH=arm
 WORKDIR /root
-RUN apk add --no-cache qemu-arm \
-    && wget -q http://mirrors.aliyun.com/alpine/v3.7/releases/$ARCH/alpine-minirootfs-3.7.0-$ARCH.tar.gz \
+RUN QEMU_ARCH=${QEMU_ARCH:-$ARCH} \
+    && apk add --no-cache qemu-$QEMU_ARCH \
+    && wget -q https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(head -c3 /etc/alpine-release)/releases/$ARCH/alpine-minirootfs-$(cat /etc/alpine-release)-$ARCH.tar.gz \
     && mkdir target-root \
-    && tar zxf alpine-minirootfs-3.7.0-$ARCH.tar.gz -C target-root \
-    && cp /usr/bin/qemu-arm target-root/usr/bin/qemu-arm
+    && tar zxf alpine-minirootfs-$(cat /etc/alpine-release)-$ARCH.tar.gz -C target-root \
+    && cp /usr/bin/qemu-$QEMU_ARCH target-root/usr/bin \
+    && cp /etc/apk/repositories target-root/etc/apk/repositories
 
 FROM scratch
-ENV ARCH=armhf
+LABEL maintainer="wener@wener.me"\
+    org.label-schema.name="base:armhf" \
+    org.label-schema.vendor="Wener" \
+    org.label-schema.description="Alpine Linux armhf based on armhf qemu emulator" \
+    org.label-schema.url="https://github.com/wenerme/dockerfiles" \
+    org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
+    org.label-schema.version="3.7" \
+    org.label-schema.license="MIT"
+
+ENV ALPINE_ARCH=armhf
 COPY --from=builder /root/target-root .
-RUN echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
-    echo http://mirrors.aliyun.com/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
 
 RUN apk add --no-cache curl busybox file nano libc6-compat
 
