1. remove MAINTAINER in base, add proper labels. 2. migrate to tuna mirror

--- a/caddy/caddy/Dockerfile
+++ b/caddy/caddy/Dockerfile
@@ -12,7 +12,8 @@ RUN VERSION=${version} PLUGINS=${plugins} /bin/sh /usr/bin/builder.sh
 # Final stage
 #
 FROM wener/base
-LABEL maintainer="wener <wener@wener.me>"
+LABEL org.label-schema.name="caddy" \
+    org.label-schema.description="Caddy based on Alpine Linux"
 
 RUN apk add --no-cache openssh-client git
 
