--- a/dante/dante/Dockerfile
+++ b/dante/dante/Dockerfile
@@ -1,5 +1,6 @@
 FROM wener/base
-MAINTAINER  wener<wener@wener.me>
+LABEL org.label-schema.name="dente" \
+    org.label-schema.description="Dente based on Alpine Linux"
 
 RUN apk add --no-cache -X http://mirrors.aliyun.com/alpine/edge/testing dante dante-server
 RUN cp /etc/sockd.conf /etc/sockd.sample.conf
