--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -1,5 +1,6 @@
 FROM        wener/base
-MAINTAINER  wener<wener@wener.me>
+LABEL org.label-schema.name="go" \
+    org.label-schema.description="Golang based on Alpine Linux"
 
 RUN apk add --no-cache go go-tools musl-dev git
 RUN mkdir /root/go
