upgrade base to 3.8

--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -1,7 +1,7 @@
 FROM wener/base as builder
 # Change the version to upgrade the base image
 RUN mkdir /rootfs && cd /rootfs && \
-    apk -X https://mirrors.tuna.tsinghua.edu.cn/alpine/v3.7/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
+    apk -X https://mirrors.tuna.tsinghua.edu.cn/alpine/v3.8/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
 
 FROM scratch
 LABEL maintainer="wener@wener.me"\
@@ -10,10 +10,12 @@ LABEL maintainer="wener@wener.me"\
     org.label-schema.description="Alpine Linux with Chinese mirror and common packages" \
     org.label-schema.url="https://github.com/wenerme/dockerfiles" \
     org.label-schema.vcs-url="https://github.com/wenerme/dockerfiles" \
-    org.label-schema.version="3.7" \
+    org.label-schema.version="3.8" \
     org.label-schema.license="MIT"
 
 ENV ALPINE_ARCH=x86_64
+ENV ALPINE_VERSION=3.8
+
 COPY --from=builder /rootfs /
 RUN echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(head -c3 /etc/alpine-release)/main/ > /etc/apk/repositories; \
     echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(head -c3 /etc/alpine-release)/community/ >> /etc/apk/repositories
