--- a/nmap/Dockerfile
+++ b/nmap/Dockerfile
@@ -1,6 +1,5 @@
 FROM wener/base:util
 
-ENV NMAP_VERSION 7.40-r0
-RUN apk add --no-cache nmap nmap-{ncat,nping,scripts,nselibs}=${NMAP_VERSION}
+RUN apk add --no-cache nmap nmap-{ncat,nping,scripts,nselibs}
 
 ENTRYPOINT [ "bash" ]
