--- a/pdns/pdns/Dockerfile
+++ b/pdns/pdns/Dockerfile
@@ -2,7 +2,8 @@ FROM wener/base:bash
 
 RUN apk add --no-cache \
             pdns pdns-recursor \
-            pdns-backend-{geoip,mysql,sqlite3,pgsql,pipe,bind,ldap} \
+            pdns-tools \
+            pdns-backend-{remote,geoip,mysql,sqlite3,pgsql,pipe,bind,ldap} \
             bind-tools drill
 
 COPY entrypoint.sh /
