--- a/php/php/Dockerfile
+++ b/php/php/Dockerfile
@@ -23,8 +23,6 @@ COPY 7/root /
 VOLUME ["/var/www/html"]
 WORKDIR /var/www/html
 
-COPY 7/entrypoint.sh /
-RUN chmod +x /entrypoint.sh
-EXPOSE 80
+EXPOSE 80 8080
 
 ENTRYPOINT ["/entrypoint.sh"]
