--- a/privoxy/Dockerfile
+++ b/privoxy/Dockerfile
@@ -2,8 +2,10 @@ FROM wener/base
 
 RUN apk add --no-cache privoxy
 
+RUN cp /etc/privoxy/config /etc/privoxy/config.sample
+COPY privoxy.conf /etc/privoxy/config
 COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
-EXPOSE 8888 7777
+EXPOSE 7777
 
 ENTRYPOINT ["/entrypoint.sh"]
