--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -1,5 +1,5 @@
-FROM        wener/base
+FROM wener/base:bash
 
 RUN apk add --no-cache nodejs yarn nodejs-npm
-RUN npm config set registry https://registry.npm.taobao.org && \
-    yarn config set registry https://registry.npm.taobao.org
+
+ENTRYPOINT []
