--- a/asterisk/full/Dockerfile
+++ b/asterisk/full/Dockerfile
@@ -5,4 +5,8 @@ RUN apk add --no-cache asterisk-{alsa,cdr-mysql,chan-dongle,curl,dahdi,dbg,dev,d
 # HTTP HTTPS AMI
 EXPOSE 8088 8089 5038
 # SIP signaling RTP audio
-EXPOSE 5060-5070/udp 8766-35000/udp
+EXPOSE  5060-5070 5060-5070/udp
+# Too much ports - not wise
+# EXPOSE 8766-35000/udp
+
+ENTRYPOINT []
