go use normal entry; asterisk use custom build

--- a/asterisk/asterisk/Dockerfile
+++ b/asterisk/asterisk/Dockerfile
@@ -1,5 +1,9 @@
 FROM wener/base:bash
 
+# add repo.wener.me to install newer version
+RUN (cd /etc/apk/keys; curl -LO https://repo.wener.me/alpine/wenermail@gmail.com-5dc8c7cd.rsa.pub ) && \
+    echo https://repo.wener.me/alpine/v$ALPINE_VERSION/community >> /etc/apk/repositories
+
 RUN apk add --no-cache asterisk openssl && \
     apk add --no-cache asterisk-{curl,dahdi,pgsql,sample-config,sounds-en,sounds-moh,srtp}
 
