use aliyun mirror - better than before now

--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -1,7 +1,7 @@
 FROM alpine as builder
 # Change the version to upgrade the base image
 RUN mkdir /rootfs && cd /rootfs && \
-    apk -X https://mirrors.tuna.tsinghua.edu.cn/alpine/v3.11/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
+    apk -X https://mirrors.aliyun.com/alpine/v3.11/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
 
 FROM scratch
 LABEL maintainer="wener@wener.me"\
@@ -16,8 +16,8 @@ LABEL maintainer="wener@wener.me"\
 ENV ALPINE_VERSION=3.11
 
 COPY --from=builder /rootfs /
-RUN echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/main/ > /etc/apk/repositories; \
-    echo https://mirrors.tuna.tsinghua.edu.cn/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/community/ >> /etc/apk/repositories
+RUN echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/main/ > /etc/apk/repositories; \
+    echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/community/ >> /etc/apk/repositories
 
 # Base tools
 RUN apk add --no-cache curl busybox-extras file nano libc6-compat
