add go:win; fix nginx and php

--- a/nginx/nginx/Dockerfile
+++ b/nginx/nginx/Dockerfile
@@ -1,4 +1,4 @@
-FROM        wener/base
+FROM        wener/base:bash
 
 RUN apk --no-cache add nginx-mod-http-lua && \
     chown -R nginx:www-data /var/lib/nginx && \
