--- a/base/base/Dockerfile
+++ b/base/base/Dockerfile
@@ -1,14 +1,17 @@
 FROM alpine as builder
-ARG ALPINE_VERSION
+ARG ALPINE_VERSION=3.12
 ARG ALPINE_MIRROR=https://mirrors.aliyun.com/alpine
+
 # Change the version to upgrade the base image
 RUN mkdir /rootfs && cd /rootfs && \
     apk -X https://mirrors.aliyun.com/alpine/v${ALPINE_VERSION}/main --no-cache --allow-untrusted --root /rootfs --initdb add alpine-base
 
 FROM scratch
 
-ARG ALPINE_VERSION
+ARG ALPINE_VERSION=3.12
+ARG ALPINE_MIRROR=https://mirrors.aliyun.com/alpine
 ENV ALPINE_VERSION=${ALPINE_VERSION}
+ENV ALPINE_MIRROR=${ALPINE_MIRROR}
 
 LABEL maintainer="wener@wener.me"\
     org.label-schema.name="base" \
@@ -20,10 +23,13 @@ LABEL maintainer="wener@wener.me"\
     org.label-schema.license="MIT"
 
 COPY --from=builder /rootfs /
-RUN echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/main/ > /etc/apk/repositories; \
-    echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/community/ >> /etc/apk/repositories
+RUN echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/main > /etc/apk/repositories; \
+    echo ${ALPINE_MIRROR}/v${ALPINE_VERSION}/community >> /etc/apk/repositories
 
 # Base tools
-RUN apk add --no-cache curl busybox-extras file nano libc6-compat
+RUN apk add --no-cache curl busybox-extras file nano libc6-compat bash
+SHELL [ "/bin/bash", "-c"]
 
-CMD ["/bin/sh"]
+COPY root /
+
+CMD ["/bin/bash"]
