--- a/php/5/Dockerfile
+++ b/php/5/Dockerfile
@@ -1,10 +1,20 @@
-FROM        wener/nginx:bash
+FROM wener/base:3.8
 
+# Nginx
+RUN apk --no-cache add nginx-mod-http-lua && \
+    chown -R nginx:www-data /var/lib/nginx && \
+    mkdir -p /run/nginx/
+
+# Bash
+RUN apk --no-cache add bash
+SHELL ["/bin/bash", "-c"]
+
+# PHP 5
 RUN apk --no-cache add php5 &&\
     apk --no-cache add \
     # Base package exclude cgi,litespeed,apache2,doc
     # Missing fileinfo, mbstring,mysqlnd,recode,session,simplexml,tidy,tokenizer,xmlwriter
-    php5-{bcmath,bz2,calendar,common,ctype,curl,dev,dba,dom,embed,enchant,exif,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mcrypt,mysqli,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,shmop,snmp,soap,sockets,sqlite3,sysvmsg,sysvsem,sysvshm,wddx,xml,xmlreader,xmlrpc,xsl,zip,zlib}
+    php5-{bcmath,bz2,calendar,common,ctype,curl,dev,dba,dom,embed,enchant,exif,fpm,ftp,gd,gettext,gmp,iconv,imap,intl,json,ldap,mcrypt,mysql,mysqli,odbc,opcache,openssl,pcntl,pdo,pdo_dblib,pdo_mysql,pdo_odbc,pdo_pgsql,pdo_sqlite,pear,pgsql,phar,phpdbg,posix,pspell,shmop,snmp,soap,sockets,sqlite3,sysvmsg,sysvsem,sysvshm,wddx,xml,xmlreader,xmlrpc,xsl,zip,zlib}
 
 # 如果执行了这一步, 会无法 install, 不知道为什么
 # https://github.com/docker-library/php/issues/443
@@ -12,18 +22,18 @@ RUN apk --no-cache add php5 &&\
 #    rm -rf /tmp/pear ~/.pearrc
 
 # https://github.com/docker-library/php/issues/240
-RUN apk add --no-cache --repository http://mirrors.aliyun.com/alpine/edge/testing gnu-libiconv
-ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
+#RUN apk add --no-cache --repository http://mirrors.aliyun.com/alpine/edge/testing gnu-libiconv
+#ENV LD_PRELOAD /usr/lib/preloadable_libiconv.so php
 
 # Fixing
-RUN \
-    # After v3.5, the php is php7
-    ln -s /usr/bin/php5 /usr/bin/php &&\
-    # XML Extension not found
-    sed -i "s|\-n||g" /usr/bin/pecl
-
-# www-data 组已经存在
-RUN set -x adduser -u 82 -D -S -G www-data www-data
+#RUN \
+#    # After v3.5, the php is php7
+#    ln -s /usr/bin/php5 /usr/bin/php &&\
+#    # XML Extension not found
+#    sed -i "s|\-n||g" /usr/bin/pecl
+#
+## www-data 组已经存在
+#RUN set -x adduser -u 82 -D -S -G www-data www-data
 
 COPY root /
 COPY 5/root /
