1. node docker based on wener/node 2. alpine-image-builder add more deps

--- a/alpine-image-builder/alpine-image-builder/Dockerfile
+++ b/alpine-image-builder/alpine-image-builder/Dockerfile
@@ -3,4 +3,4 @@ FROM wener/base
 # core
 RUN apk --no-cache add util-linux e2fsprogs e2fsprogs-extra dosfstools parted syslinux
 # utils
-RUN apk --no-cache add pigz pv wget
+RUN apk --no-cache add pigz pv wget make cryptsetup
