--- a/node/docker/Dockerfile
+++ b/node/docker/Dockerfile
@@ -1,7 +1,10 @@
-FROM node:12-alpine
+FROM wener/node
 
-RUN echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/main/ > /etc/apk/repositories; \
-    echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/community/ >> /etc/apk/repositories
+# offcial alpine is 3.11
+#FROM node:12-alpine
+#RUN echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/main/ > /etc/apk/repositories; \
+#    echo https://mirrors.aliyun.com/alpine/v$(sed -n 's/\.\d\+$//p' /etc/alpine-release)/community/ >> /etc/apk/repositories
+
 # + 300MB
 RUN apk add --no-cache docker curl nano \
       # https://www.npmjs.com/package/node-gyp
