--- a/app/app/Dockerfile
+++ b/app/app/Dockerfile
@@ -18,10 +18,6 @@ RUN apk add --no-cache openssh python3 \
     # NOPASSWORD
     && echo 'admin ALL=(ALL) NOPASSWD: ALL' >> /etc/sudoers \
     # unlock user - use same ts to prevent unneed change
-    && sed -i -re 's/^admin:.:\d+/admin:*:18000/' /etc/shadow \
-    # bash
-    && apk --no-cache add bash \
-    && mv /bin/sh /bin/ash \
-    && ln -s /bin/bash /bin/sh
+    && sed -i -re 's/^admin:.:\d+/admin:*:18000/' /etc/shadow
 
 COPY 00-echo-ips.start /etc/local.d/
