add app:console with login prompt

--- a/ubuntu/ubuntu/Dockerfile
+++ b/ubuntu/ubuntu/Dockerfile
@@ -10,18 +10,18 @@ LABEL maintainer="wener@wener.me"\
     org.label-schema.license="MIT"
 
 # Use aliyun ubuntu mirrors to replace original sources.list
-RUN . /etc/lsb-release && \
+RUN . /etc/os-release && \
     echo "# Use Aliyun ubuntu mirror \n\
-deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-security main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-updates main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-proposed main restricted universe multiverse \n\
-deb http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-backports main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-security main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-updates main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-proposed main restricted universe multiverse \n\
-deb-src http://mirrors.aliyun.com/ubuntu/ $DISTRIB_CODENAME-backports main restricted universe multiverse \n" \
+deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME main restricted universe multiverse \n\
+deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-security main restricted universe multiverse \n\
+deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-updates main restricted universe multiverse \n\
+deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-proposed main restricted universe multiverse \n\
+deb http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-backports main restricted universe multiverse \n\
+deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME main restricted universe multiverse \n\
+deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-security main restricted universe multiverse \n\
+deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-updates main restricted universe multiverse \n\
+deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-proposed main restricted universe multiverse \n\
+deb-src http://mirrors.aliyun.com/ubuntu/ $VERSION_CODENAME-backports main restricted universe multiverse \n" \
     | tee /etc/apt/sources.list > /dev/null
 # Prepend instead of replace, first update is very slow!
 #    | cat - /etc/apt/sources.list | tee /etc/apt/sources.list > /dev/null
