update go, add ansible

--- a/base/builder/Dockerfile
+++ b/base/builder/Dockerfile
@@ -1,6 +1,6 @@
 FROM wener/base
 
-RUN apk add --no-cache alpine-sdk git bash-completion sudo
+RUN apk add --no-cache alpine-sdk git bash-completion sudo ccache
 
 # uid 1000
 RUN adduser -HDh /build builder \
