frp add inotify-tools

--- a/frp/frp/Dockerfile
+++ b/frp/frp/Dockerfile
@@ -1,3 +1,4 @@
 FROM wener/base
 
 RUN apk add --no-cache -X https://mirrors.sjtug.sjtu.edu.cn/alpine/edge/testing frp
+RUN apk add --no-cache inotify-tools
