--- a/samba/samba/rootfs/etc/samba/smb.conf
+++ b/samba/samba/rootfs/etc/samba/smb.conf
@@ -19,3 +19,6 @@ browsable = yes
 writable = yes
 create mask = 0775
 directory mask = 0755
+available = yes
+# Always read writable
+force user = root
